k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stayops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/(auth/.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 8001
          - path: /api/v1/(properties.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: property-service
                port:
                  number: 8002
          - path: /api/v1/(bookings.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: booking-service
                port:
                  number: 8003
